--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "apollo-server-express": "^3.10.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "deep-object-diff": "^1.1.7",
     "graphql": "^16.6.0",
     "mongoose": "^6.6.0",
     "reflect-metadata": "^0.1.13",
