--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "graphql": "^16.6.0",
     "mongoose": "^6.6.0",
     "reflect-metadata": "^0.1.13",
+    "request-context": "^2.0.0",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
   },
