--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "deep-object-diff": "^1.1.7",
     "graphql": "^16.6.0",
     "mongoose": "^6.6.0",
+    "mongoose-autopopulate": "^0.16.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
